Fix compilation errors: constructors, accessors, logging, missing methods, Java 17 compat
Agent-Logs-Url: https://github.com/nvdweem/PCPanel/sessions/745c8bc7-c721-4d3a-b19d-d1a9ff8708f5

Co-authored-by: nvdweem <830783+nvdweem@users.noreply.github.com>